--- a/README.Rmd
+++ b/README.Rmd
@@ -14,8 +14,8 @@ knitr::opts_chunk$set(
 
 ## stmprinter: Print multiple [stm](http://www.structuraltopicmodel.com/) model dashboards to a pdf file for inspection
 
-[![Travis-CI Build Status](https://travis-ci.org/mikaelpoul/stmprinter.svg?branch=master)](https://travis-ci.org/)
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/mikaelpoul/stmprinter?branch=master&svg=true)](https://ci.appveyor.com/project/mikaelpoul/stmprinter)
+[![Travis-CI Build Status](https://travis-ci.org/mikajoh/stmprinter.svg?branch=master)](https://travis-ci.org/)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/mikajoh/stmprinter?branch=master&svg=true)](https://ci.appveyor.com/project/mikajoh/stmprinter)
 [![MIT licensed](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/mikajoh/stmprinter/master/LICENSE)
 
 Estimate multiple [stm](http://www.structuraltopicmodel.com/) models and print a dashboard for each run in separate pdf pages for inspection. These function are designed for working with 15 or less number of topics (such as with survey data) and can be particularly useful when it is difficult to find a qualitiative good model on the first run.
@@ -70,9 +70,9 @@ With our `gadarian` example, we could run the following to estimate stm models f
 set.seed(2018)
 
 stm_models <- many_models(
+  K = 3:12,
   documents = out$documents,
   vocab= out$vocab,
-  K = 3:12,
   prevalence = ~ treatment + s(pid_rep), 
   data = out$meta,
   N = 4,
